--- a/index.html
+++ b/index.html
@@ -465,9 +465,9 @@
                         <ul class="list">
                             <li class="header">Menú</li>
                             <li>
-                                <a href="../../index.html">
+                                <a href="../../map.html">
                                 <i class="material-icons">home</i>
-                                <span>Usuarios</span>
+                                <span>MAPA</span>
                                 </a>
                             </li>
                             <!-- <li>
@@ -634,7 +634,7 @@
                             <li class="active">
                                 <a href="javascript:void(0);" class="menu-toggle">
                                 <i class="material-icons">view_list</i>
-                                <span>Tables</span>
+                                <span>ABM</span>
                                 </a>
                                 <!-- <ul class="ml-menu">
                                     <li>
