--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                         <ul class="list">
                             <li class="header">Menú</li>
                             <li>
-                                <a href="../../map.html">
+                                <a href="map.html">
                                 <i class="material-icons">home</i>
                                 <span>MAPA</span>
                                 </a>
@@ -632,7 +632,7 @@
                                 </ul>
                             </li> -->
                             <li class="active">
-                                <a href="javascript:void(0);" class="menu-toggle">
+                                <a href="index.html" class="menu-toggle">
                                 <i class="material-icons">view_list</i>
                                 <span>ABM</span>
                                 </a>
