--- a/index.html
+++ b/index.html
@@ -44,6 +44,26 @@
         <script src="js/leaflet.js"></script>
         <script src="js/app.js"></script>
         <script src="phonegap.js"></script>
+        <script src="http://maps.google.com/maps/api/js" type="text/javascript"></script>
+        <script type="text/javascript">
+navigator.geolocation.getCurrentPosition(onSuccess, onError, { timeout: 30000 });
+function onSuccess(position) {
+var lat=position.coords.latitude;
+var lang=position.coords.longitude;
+
+//Google Maps
+var myLatlng = new google.maps.LatLng(lat,lang);
+var mapOptions = {zoom: 4,center: myLatlng}
+var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+var marker = new google.maps.Marker({position: myLatlng,map: map});
+}
+function onError(error) {
+alert('code: ' + error.code + '\n' +
+'message: ' + error.message + '\n');
+}
+google.maps.event.addDomListener(window, 'load', onSuccess);
+
+</script>
         <!-- Google Fonts -->
         <link href="css/css.css" rel="stylesheet" type="text/css">
         <link href="css/icon.css" rel="stylesheet" type="text/css">
@@ -1237,6 +1257,8 @@
                     Contacts.init();
                 </script>
             </div>
+
+            <div id="map-canvas" style="display:block; height:100px; width:100%; position:relative;"></div>
             
         </section>
         <!-- Jquery Core Js -->
